# tensorflow-study

./: README.md  pyproject.toml
notebook/: 00_tensor.ipynb  01_dense_mnist.ipynb  02_cnn_cifar10.ipynb
