[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "tensorflow-study"
version = "0.1.0"
description = ""
authors = ["minsoo9506 <ghktjd15gh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tensorflow-macos = "^2.14.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
